client/css/ImageGallery.scss
.imageGalleryContainer {
  align-items: center;
  background-color: rgb(128, 128, 128);
  display: flex;
  flex: 2;
  padding: 30px;
  transition: background-position 850ms;


  &__navigation {
    align-items: center;
    display: flex;
    flex: 1;
    justify-content: space-between;
    padding-left: 30px;
  }
}

.focusedImage {
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  cursor: zoom-in;
  display: flex;
  flex-direction: row;
}

.focusedImageExpand {
  background-repeat: no-repeat;
  background-size: 100%;
  animation: flexanimation 5s ease-out;

  &:hover {
    background-size: 175%;
    cursor: crosshair;
  }
}

.arrowsThumbnailContainer {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 100%;
}

.thumbnailContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.thumbnailInput {
  border: 2px solid #777;
  border-radius: 3px;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  height: 60px;
  margin: 10px 0;
  transition: border-color 200ms;
  width: 60px;
  cursor: pointer;

  &:hover {
    border-color: goldenrod;
    transition: border-color 200ms;
  }
}

.upArrow,
.downArrow,
.rightArrow,
.leftArrow {
  cursor: pointer;
  transition: color 200ms;

  &:hover {
    color: goldenrod;
    transition: color 200ms;
  }
}

